[workspace]
members = ["examples", "sauro", "sauro-build", "sauro-macro"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
sauro-macro = { version = "0.1.0", path = "sauro-macro" }
syn = { version = "2", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
