[package]
name = "sauro-cli"
description = "Typescript code generator for Deno FFI libraries written in Rust"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
path = "./src/main.rs"
name = "sauro"

[dependencies]
anyhow = "1"
camino = "1"
cargo = "0.72"
clap = { version = "4", features = ["derive", "wrap_help"] }
proc-macro2.workspace = true
sauro-core.workspace = true
syn.workspace = true
toml_edit = "0.19"
