[package]
name = "sauro-macro"
version = "0.1.0"
description = "Macros implementation of sauro::bindgen"
readme = "../README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
