[package]
name = "sauro-macro"
description = "Macros implementation of sauro::bindgen"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
sauro-core.workspace = true
syn.workspace = true
